Move customizations which used to be in acre directly into phpunit
These customizations create a simpler interface for creating mock
objects.

Conflicts:

	PHPUnit/Framework/MockObject/Mock.php

--- a/PHPUnit/Framework/MockObject/Generator/mocked_class.tpl.dist
+++ b/PHPUnit/Framework/MockObject/Generator/mocked_class.tpl.dist
@@ -7,6 +7,10 @@
     {
         return $this->__phpunit_getInvocationMocker()->expects($matcher);
     }
+	  public function expect($methodName)
+    {
+		    return $this->__phpunit_getInvocationMocker()->expect($methodName);
+    }
 
     public function __phpunit_getInvocationMocker()
     {
